# ComfyUI-Static-Primitives

./: LICENSE.txt  README.md  StaticPrimitives.json  __init__.py  collection_primitives.py  pyproject.toml  static_primitives.py
.github/workflows/: publish.yml
collection_primitives/: samplers_and_schedulers.json
js/: static_primitives.js
